# Bracketext

./: Bracketext.csproj  Bracketext.sln  CMakeLists.txt  LICENSE  Program.cs  README.md  Tags.cs  bbcodeexample.txt  bbmacros.txt  bracketect.depend  bracketect.layout  macros.txt  stdint_portable.h.in  upload.sh  version.h.in
.github/workflows/: cmake.yml
Bracketext/: .init.ss  Bracketext.csproj  Data.cs  Program.cs  Tags.cs  Test.docx  bbcodeexample.txt  bbcodeexample1.txt  bbmacros.txt  example.txt  exampleout.txt  mac.ss.txt  mac.txt  macros.txt  macrosjs.txt  out.txt  packages.config  testmacros.txt
Bracketext/Properties/: AssemblyInfo.cs
docs/html/: guide.html
docs/man/: bracketext.1
macros/: example-bbcode.txt  example.txt  macros-bbcode-to-html.txt  macros.txt  out.html  out.txt
src/: Bracketext.cpp  Bracketext.cpp~  Bracketext.h  Bracketext.h~  Data.cpp~  Data.h~  HTMLEntityTransformer.cpp  HTMLEntityTransformer.h  Tags.cpp  Tags.cpp~  Tags.h  Tags.h~  example.txt  lua_config.h  lua_cpp98_compat.hpp  lua_types.h  macros.txt  main.cc~  main.cpp  out.txt  stdint_portable.h  version.h
